Fixed build issue

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
 # Local frontend -> backend API base URL for development
-REACT_APP_API_BASE_URL=http://localhost:5000/api
+REACT_APP_API_BASE_URL=https://personalized-news-digest.onrender.com/api
